--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "terminal",
+  "name": "betanco",
   "version": "1.0.0",
-  "description": "",
+  "description": "Help you create commits easier",
   "type": "module",
+  "bin": {
+    "betanco": "./src/bin.js"
+  },
   "main": "index.js",
   "scripts": {
+    "co": "betanco",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.36.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "semistandard": "^16.0.1"
+    "betanco": "file://.",
+    "eslint": "8.36.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "15.6.1",
+    "eslint-plugin-promise": "6.1.1",
+    "semistandard": "16.0.1"
   },
   "dependencies": {
     "@bdsqqq/try": "2.3.1",
